# websaw-ng

./: .gitignore  LICENSE  README.md  pyproject.toml
apps/basic/: controllers.py
apps/common/: common_components.py  common_fixtures.py  common_models.py  common_utils.py
apps/grid/: controller.py
apps/group_session/: controllers.py
apps/mixins/auth/: auth_components.py  auth_db.py  common.py  controllers.py  models.py
apps/mixins/db_admin/: controller.py  dbadmin_components.py
apps/mixins/info/: controllers.py
apps/sample_blog/: blog_components.py  blog_db.py  blog_model.py  common.py  controllers.py  models.py
apps/sample_crud/: controller.py  grid_components.py  todo_db.py
apps/scaffold/: app_db.py  app_model.py  controllers.py
apps/skeleton/: controllers.py
apps/todo/: controller.py  todo_components.py  todo_model.py
apps/xauth/: controllers.py
tests/: test_install.py  test_isolated_routing.py
websaw_ng/: __main__.py  base_form.py  cli.py  default_app.py  server_adapters.py
websaw_ng/core/: __init__.py  app.py  context.py  ctxlocal.py  fixture.py  globs.py  loggers.py
websaw_ng/fixtures/templates/: spa_component.py  upytl_template.py
websaw_ng/fixtures/templates/yatl_template/: render.py  template.py
